--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <div class="content">
                                     <a href="#">
                                         <span class="title">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Toyota Innova
                                         </span>
                                     </a>
                                     <p class="desc">
