--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                                         dolores, possimus pariatur animi temporibus nesciunt praesentium 
                                     </p>
                                     <a class="action" href="#">
-                                        Find out more
+                                        จองตอนนี้
                                         <span aria-hidden="true">
-                                        →
+                                            →
                                         </span>
                                     </a>
                                 </div>
