--- a/index.html
+++ b/index.html
@@ -113,6 +113,44 @@
                                     </a>
                                 </div>
                         </div>
+                        <div class="card">
+                            <div class="image"></div>
+                                <div class="content">
+                                    <a href="#">
+                                        <span class="title">
+                                            Toyota Innova
+                                        </span>
+                                    </a>
+                                    <p class="desc">
+                                        
+                                    </p>
+                                    <a class="action" href="#">
+                                        จองตอนนี้
+                                        <span aria-hidden="true">
+                                            →
+                                        </span>
+                                    </a>
+                                </div>
+                        </div>
+                        <div class="card">
+                            <div class="image"></div>
+                                <div class="content">
+                                    <a href="#">
+                                        <span class="title">
+                                            Toyota Innova
+                                        </span>
+                                    </a>
+                                    <p class="desc">
+                                        
+                                    </p>
+                                    <a class="action" href="#">
+                                        จองตอนนี้
+                                        <span aria-hidden="true">
+                                            →
+                                        </span>
+                                    </a>
+                                </div>
+                        </div>
                     </section>
                 </div>
             </div>
