--- a/css.html
+++ b/css.html
@@ -21,25 +21,7 @@
 
 
 /* start: Sidebar */
-.sidebar-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, .5);
-    z-index: 490;
-    opacity: 1;
-    visibility: visible;
-    transition: opacity .2s;
-}
-.sidebar.collapsed ~ .sidebar-overlay {
-    opacity: 0;
-    visibility: hidden;
-}
-.sidebar.collapsed:hover,
-.sidebar {
-    width: 16rem;
+.sideba
     overflow-y: auto;
     transition: width .2s, left .2s;
     left: 0;
