--- a/css.html
+++ b/css.html
@@ -1,101 +1,4 @@
-
-    height: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--bs-light);
-    font-size: 1.5rem;
-    border-radius: 50%;
-}
-.summary-primary,
-.summary-indigo,
-.summary-success,
-.summary-danger {
-    transition: .2s;
-}
-.summary-primary:hover,
-.summary-indigo:hover,
-.summary-success:hover,
-.summary-danger:hover {
-    color: var(--bs-light) !important;
-}
-.summary-primary:hover .summary-icon,
-.summary-indigo:hover .summary-icon,
-.summary-success:hover .summary-icon,
-.summary-danger:hover .summary-icon {
-    background-color: var(--bs-light) !important;
-}
-.summary-primary:hover .summary-icon {
-    color: var(--bs-primary) !important;
-}
-.summary-indigo:hover .summary-icon {
-    color: var(--bs-indigo) !important;
-}
-.summary-success:hover .summary-icon {
-    color: var(--bs-success) !important;
-}
-.summary-danger:hover .summary-icon {
-    color: var(--bs-danger) !important;
-}
-.summary-primary:hover {
-    background-color: var(--bs-primary) !important;
-}
-.summary-indigo:hover {
-    background-color: var(--bs-indigo) !important;
-}
-.summary-success:hover {
-    background-color: var(--bs-success) !important;
-}
-.summary-danger:hover {
-    background-color: var(--bs-danger) !important;
-}
-/* end: Suummary */
-/* end: Main */
-
-
-
-/* start: Breakpoints */
- /* X-Small devices (portrait phones, less than 576px) */
- /* No media query for `xs` since this is the default in Bootstrap */
-
- /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-    
-}
-
- /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-    /* start: Sidebar */
-    .sidebar-overlay {
-        opacity: 0;
-        visibility: hidden;
-    }
-    .sidebar.collapsed {
-        width: 4.75rem;
-        left: 0;
-    }
-    .sidebar.collapsed .sidebar-logo {
-        display: none;
-    }
-    .sidebar.collapsed:hover .sidebar-logo {
-        display: block;
-    }
-    .sidebar.collapsed:hover .sidebar-toggle {
-        margin-left: auto;
-        margin-right: 0;
-    }
-    .sidebar.collapsed .sidebar-toggle {
-        margin: 0 auto;
-        transform: rotateZ(180deg);
-    }
-    .sidebar.collapsed:hover .sidebar-menu-divider {
-        font-size: .75rem;
-        color: var(--bs-gray-600);
-        transition: opacity .2s;
-        opacity: 1;
-        visibility: visible;
-    }
-    .sidebar.collapsed .sidebar-menu-divider {
+debar-menu-divider {
         opacity: 0;
         visibility: hidden;
     }
