--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
     <section id="product1" class="section-p1">
         <h2>Hit cars</h2>
+        <embed src="https://drive.google.com/viewerng/
+viewer?embedded=true&url=http://example.com/the.pdf" width="500" height="375">
     </section>
 
     <section id="sm-banner" class="section-p1">
