--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <object class="pdf" 
-        data=""
+        data="Car-rental\รถเช่ามหาชัย.pdf"
         width="800"
         height="500">
     </object>
