--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <object class="pdf" 
-        data=""
+        data="file:///C:/Users/User/Downloads/%E0%B8%A3%E0%B8%96%E0%B9%80%E0%B8%8A%E0%B9%88%E0%B8%B2%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%8A%E0%B8%B1%E0%B8%A2.html"
         width="800"
         height="500">
     </object>
