--- a/Deal.html
+++ b/Deal.html
@@ -32,9 +32,10 @@
     </section>
 
     <object class="pdf" 
-        data=""
-        width="800"
-        height="500">
+        data="https://drive.google.com/file/d/14WAb0-JBmcc-xtkkIA92RMgXkfh89_ni/preview"
+        width="640" 
+        height="480" 
+        allow="autoplay">
     </object>
 
     <section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
