--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <object class="pdf" 
-        data="https://drive.google.com/file/d/14WAb0-JBmcc-xtkkIA92RMgXkfh89_ni/preview"
+        data=""
         width="100%" 
         height="480" 
         allow="autoplay">
