--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <object class="pdf" 
-        data=""
+        data="รถเช่ามหาชัย.pdf"
         width="100%" 
         height="480" 
         allow="autoplay">
