--- a/Deal.html
+++ b/Deal.html
@@ -34,7 +34,7 @@
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
         width="100%" 
-        height="480" 
+        height="100%" 
         allow="autoplay">
     </object>
 
