--- a/Deal.html
+++ b/Deal.html
@@ -33,8 +33,8 @@
 
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
-        width="100%" 
-        height="100%" 
+        width="1000px" 
+        height="700px" 
         allow="autoplay">
     </object>
 
