--- a/Deal.html
+++ b/Deal.html
@@ -33,7 +33,7 @@
 
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
-        width="1000px" 
+        width="50%" 
         height="700px" 
         allow="autoplay">
     </object>
