--- a/Deal.html
+++ b/Deal.html
@@ -33,6 +33,8 @@
 
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
+        width="100%" 
+        height="100%" 
         allow="autoplay">
     </object>
 
