--- a/Deal.html
+++ b/Deal.html
@@ -33,9 +33,8 @@
 
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
-        width="500" 
-        height="700" 
-        allow="autoplay">
+        width="800" 
+        height="700">
     </object>
 
     <section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
