--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <object class="pdf" 
-        data="รถเช่ามหาชัย.pdf"
+        src="รถเช่ามหาชัย.pdf"
         width="800" 
         height="700">
     </object>
