--- a/Deal.html
+++ b/Deal.html
@@ -37,7 +37,7 @@
         height="700">
     </object>
 
-    <section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
+    <!--<section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
         <div class="Servicerentalrules">
             <h3>กติกาการเช่าบริการ</h3>
             <p class="servicerentalrules">
@@ -82,7 +82,7 @@
                 </p>
             </p>
         </div>
-    </section>
+    </section>-->
     
     <footer class="section-p1">
         <div class="col">
