--- a/Deal.html
+++ b/Deal.html
@@ -31,6 +31,9 @@
         </div>
     </section>
 
+    <section id="header">
+        
+    </section>
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
         width="800" 
