--- a/Deal.html
+++ b/Deal.html
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section id="header">
+    <section id="Rule">
         <object class="pdf" 
             data="รถเช่ามหาชัย.pdf"
             width="800" 
