--- a/Deal.html
+++ b/Deal.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="Rule">
-        <h1></h1>
+        <h1>เงื่อนไขการใช้บริการรถเช่ามหาชัย</h1>
         <object class="pdf" 
             data="รถเช่ามหาชัย.pdf"
             width="800" 
