--- a/Deal.html
+++ b/Deal.html
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <h1>เงื่อนไขการใช้บริการรถเช่ามหาชัย</h1>
+    <h1 class="Rule">เงื่อนไขการใช้บริการรถเช่ามหาชัย</h1>
     <object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
         width="800" 
