--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="#" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
