--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
         </div>
         <div class="single-prodetails">
             <h4>Zusuki Celerio</h4>
-            <p class="car_price">ค่าเช่ารายวัน<span class="car_price_time"> 800 </span>บาท/วัน</p>  
+            <p class="car_price">ค่าเช่า<span class="car_price_time"> 800 </span>บาท/วัน</p>  
             <p class="car_price">ค่าเช่ารายสัปหาด์<span class="car_price_time"> 4800 </span>บาท/สัปหาด์</p>   
             <p class="car_price">ค่าเช่ารายเดือน<span class="car_price_time"> 14400 </span>บาท/เดือน</p>                               
             <p><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <circle cx="12" cy="6" r="4" stroke="#1C274C" stroke-width="1.5"></circle> <path d="M19.9975 18C20 17.8358 20 17.669 20 17.5C20 15.0147 16.4183 13 12 13C7.58172 13 4 15.0147 4 17.5C4 19.9853 4 22 12 22C14.231 22 15.8398 21.8433 17 21.5634" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>5 ที่นั่ง</p>
