--- a/Deal.html
+++ b/Deal.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="#" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="https://i.imgur.com/40rIbuO.png" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
