--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="https://i.imgur.com/ZopOH3e.png" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="blob:https://www.instagram.com/83de97e4-56bb-4bb3-9ed5-fa4569eac56a" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
