--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="Car-rental\rodchaomahachai.png" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="C:\Users\User\Documents\GitHub\Car-rental\rodchaomahachai.png" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
