--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src=https://scontent.xx.fbcdn.net/v/t1.15752-9/441325260_468696799167653_2252817749735927228_n.png?stp=dst-png_p206x206&_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Q-Bo4evMnCoQ7kNvgEOuJe1&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QERuWaGz_Jjwhu96C3WwzsGldjp8k3AuPbU18JVfkDHOA&oe=667FC04F" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/441325260_468696799167653_2252817749735927228_n.png?stp=dst-png_p206x206&_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Q-Bo4evMnCoQ7kNvgEOuJe1&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QERuWaGz_Jjwhu96C3WwzsGldjp8k3AuPbU18JVfkDHOA&oe=667FC04F" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
