--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
 
     <section id="prodetails" class="section-p1">
         <div class="single-proimg">
-            <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" id="MainImg" alt="">
+            <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" height="100%" id="MainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
                     <img src="https://www.suzuki.co.th/upload/gallery/20201112_s_t8EbXQY6Tn.jpg" width="100%" class="small-img" alt="">
@@ -52,7 +52,6 @@
             <!--ปุ่มมีปัญหา คือ มันคุมพื้นที่มากกว่ากรอบ-->
             <a href="payment.html">
                 <button class="rentbtn"><p class="text">ชำระเงิน</p></button>
-                    
             </a>
         </div>
         <!--<div class="small-img-group">
