--- a/Car.html
+++ b/Car.html
@@ -164,7 +164,7 @@
                         <div class="car_body_img_container">
                             <a href="product.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" alt="Ford Focus">
+                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="50px" alt="Ford Focus">
                                 </figure>
                             </a>
                         </div>
