--- a/Car.html
+++ b/Car.html
@@ -164,17 +164,17 @@
                         <div class="car_body_img_container">
                             <a href="product.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="50px" alt="Ford Focus">
+                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" alt="Ford Focus">
                                 </figure>
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">Toyota</p>
+                            <p class="car_name">Suzuki</p>
                             <div class="car_price_container">
                                 <a href="product.html" class="car_model_link">
                                     <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
-                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
