--- a/Car.html
+++ b/Car.html
@@ -172,7 +172,7 @@
                             <p class="car_name">Suzuki</p>
                             <div class="car_price_container">
                                 <a href="product.html" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Innova</h2>
+                                    <h2 class="car_model" title="FOCUS"></h2>
                                 </a>
                                 <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
                             </div>
