--- a/Car.html
+++ b/Car.html
@@ -182,7 +182,7 @@
                         <ul class="car_list_characteristics">
                             <li>
                                 <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
+                                <span title="Manual">Manual</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
@@ -190,7 +190,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
-                                <span title="5">7</span>
+                                <span title="5">5</span>
                             </li>
                             <li>
                                 <a href="product.html">
