--- a/Car.html
+++ b/Car.html
@@ -219,7 +219,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="Nissan Sentra">
+                                    <img src="https://i.pinimg.com/564x/ef/00/88/ef0088781ab9677268c1fd675fd8cf7b.jpg" alt="Toyota Altis">
                                 </figure>
                             </a>
                         </div>
