--- a/Car.html
+++ b/Car.html
@@ -54,7 +54,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Toyota Innova">
                                 </figure>
                             </a>
                         </div>
@@ -109,7 +109,7 @@
                         <div class="car_body_img_container">
                             <a href="#" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
+                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Toyota Innova">
                                 </figure>
                             </a>
                         </div>
@@ -164,7 +164,7 @@
                         <div class="car_body_img_container">
                             <a href="product.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" alt="Ford Focus">
+                                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" alt="Suzuki Celerio">
                                 </figure>
                             </a>
                         </div>
