--- a/index.html
+++ b/index.html
@@ -145,13 +145,12 @@
         </div>
         <div class="col">
             <h4>My Account</h4>
-            <a href="index.html">Sign up</a>
-            <a href="Deal.html">Log in</a>
+            <a href="signup.html">Sign up</a>
+            <a href="login.html">Log in</a>
             <h4>ความช่วยเหลือ</h4>
-            <a href="Account.html">วิธีการจอง</a>
-            <a href="Account.html">คำถามที่พบบ่อย</a>
-            <a href="Account.html">เงื่อนไขการใช้บริการ</a>
-            <a href="Account.html">ความช่วยเหลือเพิ่มเติม</a>
+            <a href="Deal.html">วิธีการจอง</a>
+            <a href="Deal.html">เงื่อนไขการใช้บริการ</a>
+            <a href="index.html">ความช่วยเหลือเพิ่มเติม</a>
         </div>
         <div class="col install">
             <h4>Payment Gateway</h4>
