--- a/Deal.html
+++ b/Deal.html
@@ -31,6 +31,7 @@
         </div>
     </section>
 
+    <h1 class="Rule"></h1>
     <h1 class="Rule">เงื่อนไขการใช้บริการ</h1>
     
     <object class="pdf" 
