--- a/product.html
+++ b/product.html
@@ -22,8 +22,8 @@
             </ul>
         </div>
         <div id="mobile">
-            <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="Account.html"><i class="fa-solid fa-user"></i></a>
+            <!--<a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="Account.html"><i class="fa-solid fa-user"></i></a>-->
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
