--- a/Deal.html
+++ b/Deal.html
@@ -19,8 +19,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="Deal.html">Deal Contract</a></li>
                 <li><a href="Car.html">Car</a></li>
-                <li id="lg-acc"><a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                <li id="lg-bag"><a href="Account.html"><i class="fa-solid fa-user"></i></a></li>
+                <!--<li id="lg-acc"><a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li id="lg-bag"><a href="Account.html"><i class="fa-solid fa-user"></i></a></li>-->
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
