--- a/celerio.html
+++ b/celerio.html
@@ -122,6 +122,23 @@
             <p>Copyright © by Tapat Toungsakul 2024 </p>
         </div>
     </footer>
+    <script>
+        var MainImg = document.getElementById("MainImg")
+        var MainImg = document.getElementById("small-img")
+
+        smallimg[0]=onclick = function(){
+            MainImg.src = smallimg[0].src;
+        }
+        smallimg[1]=onclick = function(){
+            MainImg.src = smallimg[0].src;
+        }
+        smallimg[2]=onclick = function(){
+            MainImg.src = smallimg[2].src;
+        }
+        smallimg[3]=onclick = function(){
+            MainImg.src = smallimg[3].src;
+        }
+    </script>
 
     <script src="script.js"></script>
     <script src="swiper.min.js"></script>
