--- a/celerio.html
+++ b/celerio.html
@@ -33,6 +33,9 @@
             <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" height="100%" id="MainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
+                    <img src="https://www.suzuki.co.th/upload/content/20201103_s_S22NaeAylP.png" width="100%" class="small-img" alt="">
+                </div>
+                <div class="small-img-col">
                     <img src="https://www.suzuki.co.th/upload/gallery/20201112_s_t8EbXQY6Tn.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
