--- a/celerio.html
+++ b/celerio.html
@@ -124,19 +124,16 @@
     </footer>
     <script>
         var MainImg = document.getElementById("MainImg")
-        var MainImg = document.getElementById("small-img")
+        var smallimg = document.getElementsByClassName("small-img")
 
-        smallimg[0]=onclick = function(){
+        smallimg[0].onclick = function(){
             MainImg.src = smallimg[0].src;
         }
-        smallimg[1]=onclick = function(){
-            MainImg.src = smallimg[0].src;
+        smallimg[1].onclick = function(){
+            MainImg.src = smallimg[1].src;
         }
-        smallimg[2]=onclick = function(){
+        smallimg[2].onclick = function(){
             MainImg.src = smallimg[2].src;
-        }
-        smallimg[3]=onclick = function(){
-            MainImg.src = smallimg[3].src;
         }
     </script>
 
