--- a/innova.html
+++ b/innova.html
@@ -30,10 +30,10 @@
 
     <section id="prodetails" class="section-p1">
         <div class="single-proimg">
-            <img src="#" width="100%" height="100%" id="MainImg" alt="">
+            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" width="100%" height="100%" id="MainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="#" width="100%" class="small-img" alt="">
+                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
                     <img src="#" width="100%" class="small-img" alt="">
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="single-prodetails">
-            <h4>Suzuki Celerio</h4>
+            <h4>Toyota Innova</h4>
             <p class="car_price">ค่าเช่า</p>
             <p><span class="car_price_time"> 2500 </span>บาท/วัน</p>
             <p><span class="car_price_time"> 12500 </span>บาท/สัปดาห์</p>
