--- a/vios.html
+++ b/vios.html
@@ -30,16 +30,16 @@
 
     <section id="prodetails" class="section-p1">
         <div class="single-proimg">
-            <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" width="100%" height="100%" id="MainImg" alt="">
+            <img src="https://i.imgur.com/kdC4yIH.jpeg" width="100%" height="100%" id="MainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
                     <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="#" width="100%" class="small-img" alt="">
+                    <img src="https://i.imgur.com/kdC4yIH.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="#" width="100%" height="107px" class="small-img" alt="">
+                    <img src="https://i.imgur.com/kdC4yIH.jpeg" width="100%" height="107px" class="small-img" alt="">
                 </div>
             </div>
         </div>
