--- a/vios.html
+++ b/vios.html
@@ -36,7 +36,7 @@
                     <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://i.imgur.com/kdC4yIH.jpeg" width="100%" class="small-img" alt="">
+                    <img src="https://img2.pic.in.th/pic/b599a2e2b23c50f5c9641cf4b2c594bf.md.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
                     <img src="https://i.imgur.com/kdC4yIH.jpeg" width="100%" height="107px" class="small-img" alt="">
